<resources>
    <string name="com.crashlytics.android.build_id">a6645348-2674-43e0-bb95-fe65daf2c985</string>
    <string name="app_name">Dragon Project</string>
    <string name="notification_title">Dragon Project</string>
    <string name="text_message_purchase_status">Payment being processed</string>
    <string name="ok">OK</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_title_terms_conditions">Confirm</string>
    <string name="dialog_message_terms_conditions">"%s
Consent to the agreement to proceed to Google Play purchase processing."</string>
    <string name="dialog_title_terms_recovery">Purchase processing incomplete for some items</string>
    <string name="dialog_message_terms_recovery">"%s
Consent to the agreement to complete."</string>
    <string name="dialog_button_terms_conditions_check_contract">Read agreement</string>
    <string name="dialog_button_terms_conditions_continue">Next</string>
    <string name="dialog_button_terms_conditions_exec">Run</string>
    <string name="mock_location_not_allowed">To save your location, please turn off Allow mock locations under application settings</string>
    <string name="payment_no_purchased_item_title">Confirmation complete</string>
    <string name="payment_no_purchased_item_message">Purchase processing has completed without error. Please contact us if your Gems are not reflected.</string>
    <string name="payment_check_inventory_error_title">購入確認失敗</string>
    <string name="payment_check_inventory_error_message">購入確認処理でエラーが発生しました。しばらくたってから再度お試しください。</string>
    <string name="payment_cancel_title">Error</string>
    <string name="payment_cancel_message">Purchase Canceled</string>
    <string name="payment_checking_inventory">Confirming</string>
    <string name="dialog_title_quit">DPro</string>
    <string name="dialog_title_quit_fullname">Dragon Project</string>
    <string name="dialog_message_quit">Are you sure you want to close the game?</string>
    <string name="dialog_button_quit">OK</string>
    <string name="dialog_button_copy">Copy</string>
    <string name="copy_to_clipboard">Copied to the clipboard</string>
    <string name="invite_mail_button">Introduce by email</string>
    <string name="invite_mail_title">Invites your friends to play Dragon Project</string>
    <string name="invite_mail_body">"You have received an invite to play Dragon Project!
Invitation code: %s

Start the game, then enter the above code from [Menu -> Enter serial code -> Invitation code] to get a bonus!

Embark on a vast adventure! Attack and execute awesome skills all at the touch of one finger!
Take on powerful bosses with your friends in co-op battle!

Download is free. No registration required.
An authentic smartphone RPG that everyone can enjoy!
Android version
https://play.google.com/store/apps/details?id=net.gogame.dragon
iOS version
http://itunes.apple.com/app/id1244634394"</string>
    <string name="payment_server_error_title">Server error</string>
    <string name="payment_server_error_message">A server error has occurred. Please try again later.</string>
    <string name="network_error">Network error</string>
    <string name="network_error_occurred">Cannot connect to network. Please change your wireless settings or try again from a stronger connection.</string>
    <string name="network_purchase_delay">Purchase processing is delayed. We kindly ask that you try again later.</string>
    <string name="network_purchase_error">An error has occurred during purchase processing. We kindly ask that you try again later.</string>
    <string name="notification_purchase_title">Purchase complete</string>
    <string name="notification_purchase_item">Purchase complete.</string>
    <string name="notification_purchase_item_default">Purchase of Gems complete.</string>
    <string name="notification_purchase_already_cancelled">This order number has already been cancelled</string>
    <string name="url_terms">https://gogame.net/eula</string>
    <string name="promo_tag">fcrystal</string>
    <string name="facebook_app_id">403641043327462</string>
    <string name="ShopItemCount">132</string>
    <string name="ShopItemName0">Starter Pack</string>
    <string name="ShopItemName1">Welcome Pack</string>
    <string name="ShopItemName2">Gems x5</string>
    <string name="ShopItemName3">Gems x30</string>
    <string name="ShopItemName4">Gems x70</string>
    <string name="ShopItemName5">Gems x150</string>
    <string name="ShopItemName6">Gems x400</string>
    <string name="ShopItemName7">Gems x900</string>
    <string name="ShopItemName8">Gems x25</string>
    <string name="ShopItemName9">Gems x100</string>
    <string name="ShopItemName10">Gems x200</string>
    <string name="ShopItemName11">Gems x350</string>
    <string name="ShopItemName12">Gems x650</string>
    <string name="ShopItemName13">Gems x1300</string>
    <string name="ShopItemName14">Weekly Card</string>
    <string name="ShopItemName15">Monthly Card</string>
    <string name="ShopItemName16">Gems x25</string>
    <string name="ShopItemName17">Gems x100</string>
    <string name="ShopItemName18">Gems x200</string>
    <string name="ShopItemName19">Gems x350</string>
    <string name="ShopItemName20">Gems x650</string>
    <string name="ShopItemName21">Gems x1300</string>
    <string name="ShopItemName22">Magi Enhancement Package</string>
    <string name="ShopItemName23">Materials Fire Pack</string>
    <string name="ShopItemName24">Materials Water Pack</string>
    <string name="ShopItemName25">Materials Earth Pack</string>
    <string name="ShopItemName26">Materials Lightning Pack</string>
    <string name="ShopItemName27">Materials Normal Pack</string>
    <string name="ShopItemName28">Materials Common Pack</string>
    <string name="ShopItemName29">Materials Galdrux Pack</string>
    <string name="ShopItemName30">Materials Empithon Pack</string>
    <string name="ShopItemName31">Materials Ascetic Wukong Pack</string>
    <string name="ShopItemName32">Materials Evataurus Pack</string>
    <string name="ShopItemName33">Materials Elgordan Pack</string>
    <string name="ShopItemName34">Materials Blade Arion Pack</string>
    <string name="ShopItemName35">Materials Lightning Abaia Pack</string>
    <string name="ShopItemName36">Materials Chasm Mudigger Pack</string>
    <string name="ShopItemName37">Materials Sigzarthus Pack</string>
    <string name="ShopItemName38">Materials Magnomus Pack</string>
    <string name="ShopItemName39">Materials Turtle Magnas Pack</string>
    <string name="ShopItemName40">Materials Jondargil Pack</string>
    <string name="ShopItemName41">Materials Ovidium Pack</string>
    <string name="ShopItemName42">Materials Leider Reaper Pack</string>
    <string name="ShopItemName43">Google Gift Card 30 Gems</string>
    <string name="ShopItemName44">Google Gift Card 60 Gems</string>
    <string name="ShopItemName45">Google Gift Card 120 Gems</string>
    <string name="ShopItemName46">Google Gift Card 240 Gems</string>
    <string name="ShopItemName47">Google Gift Card 480 Gems</string>
    <string name="ShopItemName48">Halloween Pack</string>
    <string name="ShopItemName49">Materials Vemerphose Pack</string>
    <string name="ShopItemName50">Materials Infinaruva Pack</string>
    <string name="ShopItemName51">Materials Deserrodule Pack</string>
    <string name="ShopItemName52">Materials Arogirania Pack</string>
    <string name="ShopItemName53">Materials Gordmagia Pack</string>
    <string name="ShopItemName54">Materials Tartala Gunki Pack</string>
    <string name="ShopItemName55">Materials Stratoplume Pack</string>
    <string name="ShopItemName56">Weekly Card</string>
    <string name="ShopItemName57">Black Friday Cupids Bolt Bundle</string>
    <string name="ShopItemName58">Black Friday Frozen Water Rush Bundle</string>
    <string name="ShopItemName59">Black Friday Week Crazy Materials Pack A</string>
    <string name="net_gogame_chat_back_button_description">Back</string>
    <string name="net_gogame_chat_close_button_description">Close</string>
    <string name="net_gogame_chat_rate_bad_description">Rate bad</string>
    <string name="net_gogame_chat_rate_good_description">Rate good</string>
    <string name="net_gogame_chat_rate_message">Rate this chat</string>
    <string name="net_gogame_chat_switch_button_description">Talk to a person</string>
    <string name="net_gogame_chat_title">Support</string>
    <string name="net_gogame_gowrap_community_facebook_button_subcaption">Official Facebook Community Page</string>
    <string name="net_gogame_gowrap_community_forum_button_subcaption">Official Forum</string>
    <string name="net_gogame_gowrap_community_header_subcaption">Community pages and forums</string>
    <string name="net_gogame_gowrap_community_instagram_button_subcaption">Official Instagram Account Page</string>
    <string name="net_gogame_gowrap_community_twitter_button_subcaption">Official Twitter Feed</string>
    <string name="net_gogame_gowrap_community_wiki_button_subcaption">Official Wiki</string>
    <string name="net_gogame_gowrap_community_youtube_button_subcaption">Official Youtube Channel</string>
    <string name="net_gogame_gowrap_support_chat_button_caption">Helpline chat</string>
    <string name="net_gogame_gowrap_support_chat_button_subcaption">Talk to someone directly on our 24/7 helpdesk.</string>
    <string name="net_gogame_gowrap_support_form_attachment_no_file_caption">No file attached</string>
    <string name="net_gogame_gowrap_support_form_body_hint">Problem description (REQUIRED)</string>
    <string name="net_gogame_gowrap_support_form_button_caption">Drop us a message</string>
    <string name="net_gogame_gowrap_support_form_button_subcaption">"Can't find a solution on the FAQ? No worries!"</string>
    <string name="net_gogame_gowrap_support_form_category_hint">Problem category (REQUIRED)</string>
    <string name="net_gogame_gowrap_support_form_email_hint">Your email address (REQUIRED)</string>
    <string name="net_gogame_gowrap_support_form_name_hint">Name (REQUIRED)</string>
    <string name="net_gogame_gowrap_support_form_remove_attachment_content_description">Remove attachment</string>
    <string name="net_gogame_gowrap_support_form_send_button_caption">Send</string>
    <string name="net_gogame_gowrap_support_form_title">Send ticket</string>
    <string name="net_gogame_gowrap_help_chat_button_caption">Live Chat</string>
    <string name="net_gogame_gowrap_help_faq_button_caption">FAQ</string>
    <string name="net_gogame_gowrap_help_form_button_caption">Send Ticket</string>
    <string name="net_gogame_gowrap_ranking_level_header_caption">Level</string>
    <string name="net_gogame_gowrap_ranking_player_header_caption">Player</string>
    <string name="net_gogame_gowrap_ranking_position_header_caption">\#</string>
    <string name="net_gogame_gowrap_support_form_body_label">Problem Description *</string>
    <string name="net_gogame_gowrap_support_form_category_label">Problem Category *</string>
    <string name="net_gogame_gowrap_support_form_email_label">Email Address *</string>
    <string name="net_gogame_gowrap_support_form_mobile_number_hint">Your mobile number</string>
    <string name="net_gogame_gowrap_support_form_mobile_number_label">Mobile number</string>
    <string name="net_gogame_gowrap_support_form_name_label">Your name *</string>
    <string name="net_gogame_gowrap_support_form_required_label">* REQUIRED</string>
    <string name="net_gogame_gowrap_tips_article3_description">"Just started? Completely clueless? We're here to help with a quick overview of the basics."</string>
    <string name="net_gogame_gowrap_tips_article3_title">"Ultimate Beginner's Guide"</string>
    <string name="net_gogame_gowrap_tips_see_more_button_caption">See more</string>
</resources>