<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/net_gogame_gowrap_margin_left" android:layout_marginTop="@dimen/net_gogame_gowrap_margin_top" android:layout_marginRight="@dimen/net_gogame_gowrap_margin_right" android:layout_marginBottom="@dimen/net_gogame_gowrap_margin_bottom" style="@style/net_gogame_gowrap_support_form">
        <FrameLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/net_gogame_gowrap_support_form_title_container">
            <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_title" style="@style/net_gogame_gowrap_support_form_title" />
            <net.gogame.gowrap.ui.view.AutoStateButton android:layout_gravity="center|left|top" android:id="@id/net_gogame_gowrap_back_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" style="@style/net_gogame_gowrap_back_button_new" />
        </FrameLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_name_label" style="@style/net_gogame_gowrap_support_form_label" />
        <EditText android:gravity="top" android:id="@id/net_gogame_gowrap_support_form_field_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/net_gogame_gowrap_support_form_name_hint" android:ems="10" android:inputType="textPersonName" style="@style/net_gogame_gowrap_support_form_field.name" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_email_label" style="@style/net_gogame_gowrap_support_form_label" />
        <EditText android:gravity="top" android:id="@id/net_gogame_gowrap_support_form_field_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/net_gogame_gowrap_support_form_email_hint" android:ems="10" android:inputType="textEmailAddress" style="@style/net_gogame_gowrap_support_form_field.email" />
        <LinearLayout android:id="@id/net_gogame_gowrap_support_form_group_mobile_number" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_mobile_number_label" style="@style/net_gogame_gowrap_support_form_label" />
            <EditText android:gravity="top" android:id="@id/net_gogame_gowrap_support_form_field_mobile_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/net_gogame_gowrap_support_form_mobile_number_hint" android:ems="10" android:inputType="phone" style="@style/net_gogame_gowrap_support_form_field.mobile_number" />
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_category_label" style="@style/net_gogame_gowrap_support_form_label" />
        <TextView android:id="@id/net_gogame_gowrap_support_form_field_category" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/net_gogame_gowrap_support_form_category_hint" style="@style/net_gogame_gowrap_support_form_field.category" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_body_label" style="@style/net_gogame_gowrap_support_form_label" />
        <EditText android:gravity="top" android:id="@id/net_gogame_gowrap_support_form_field_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/net_gogame_gowrap_support_form_body_hint" android:lines="8" android:ems="10" android:inputType="textCapSentences|textMultiLine" style="@style/net_gogame_gowrap_support_form_field.body" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_required_label" style="@style/net_gogame_gowrap_support_form_label" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip">
            <TextView android:gravity="center_vertical" android:id="@id/net_gogame_gowrap_support_form_field_attachment" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_attachment_no_file_caption" android:drawableLeft="@drawable/net_gogame_gowrap_icon_attach" android:layout_weight="1.0" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/net_gogame_gowrap_support_form_field_remove_attachment" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_close" android:contentDescription="@string/net_gogame_gowrap_support_form_remove_attachment_content_description" />
        </LinearLayout>
        <net.gogame.gowrap.ui.view.AutoStateButton android:layout_gravity="center_horizontal" android:id="@id/net_gogame_gowrap_support_form_button_send" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_gogame_gowrap_support_form_send_button_caption" style="@style/net_gogame_gowrap_default_button" />
    </LinearLayout>
</ScrollView>