<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingBottom="120.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/net_gogame_gowrap_margin_left" android:layout_marginTop="@dimen/net_gogame_gowrap_margin_bottom" android:layout_marginRight="@dimen/net_gogame_gowrap_margin_right" android:layout_marginBottom="@dimen/net_gogame_gowrap_margin_top">
        <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@id/net_gogame_gowrap_community_header" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" custom:image="@drawable/net_gogame_gowrap_community_header" custom:level="5" custom:caption="@string/net_gogame_gowrap_community_header_subcaption" />
        <net.gogame.gowrap.ui.layout.CustomGridLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" custom:column_count="@integer/net_gogame_gowrap_community_grid_columns" custom:horizontal_spacing="8.0dip" custom:vertical_spacing="8.0dip">
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@id/net_gogame_gowrap_facebook_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:image="@drawable/net_gogame_gowrap_button_facebook" custom:level="1" custom:caption="@string/net_gogame_gowrap_community_facebook_button_subcaption" />
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@id/net_gogame_gowrap_twitter_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:image="@drawable/net_gogame_gowrap_button_twitter" custom:level="2" custom:caption="@string/net_gogame_gowrap_community_twitter_button_subcaption" />
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@id/net_gogame_gowrap_instagram_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:image="@drawable/net_gogame_gowrap_button_instagram" custom:level="3" custom:caption="@string/net_gogame_gowrap_community_instagram_button_subcaption" />
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@id/net_gogame_gowrap_youtube_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:image="@drawable/net_gogame_gowrap_button_youtube" custom:level="4" custom:caption="@string/net_gogame_gowrap_community_youtube_button_subcaption" />
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@id/net_gogame_gowrap_forum_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:image="@drawable/net_gogame_gowrap_button_forum" custom:level="5" custom:caption="@string/net_gogame_gowrap_community_forum_button_subcaption" />
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@id/net_gogame_gowrap_wiki_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:image="@drawable/net_gogame_gowrap_button_wiki" custom:level="6" custom:caption="@string/net_gogame_gowrap_community_wiki_button_subcaption" />
        </net.gogame.gowrap.ui.layout.CustomGridLayout>
    </LinearLayout>
</ScrollView>