<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:background="@drawable/net_gogame_gowrap_dpro_tips3_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/net_gogame_gowrap_tips_article3_title" android:maxLines="2" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/net_gogame_gowrap_tips_article3_description" android:maxLines="4" android:minLines="2" />
        </LinearLayout>
        <net.gogame.gowrap.ui.view.AutoStateButton android:textSize="12.0sp" android:textColor="@android:color/white" android:layout_gravity="right" android:id="@id/net_gogame_gowrap_tip3_button" android:background="@drawable/net_gogame_gowrap_default_button_background" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/net_gogame_gowrap_tips_see_more_button_caption" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" />
    </LinearLayout>
</LinearLayout>