<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/net_gogame_gowrap_ranking_position" android:layout_width="70.0dip" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:text="@string/net_gogame_gowrap_ranking_position_header_caption" android:maxLines="1" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" />
    <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/net_gogame_gowrap_ranking_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/net_gogame_gowrap_ranking_player_header_caption" android:maxLines="1" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" android:layout_weight="1.0" />
    <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:ellipsize="end" android:gravity="center|right" android:id="@id/net_gogame_gowrap_ranking_level" android:layout_width="40.0dip" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:text="@string/net_gogame_gowrap_ranking_level_header_caption" android:maxLines="1" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" />
    <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:ellipsize="end" android:gravity="center|right" android:id="@id/net_gogame_gowrap_ranking_value" android:layout_width="60.0dip" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:maxLines="1" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" />
</LinearLayout>