<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingBottom="120.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/net_gogame_gowrap_margin_left" android:layout_marginTop="@dimen/net_gogame_gowrap_margin_bottom" android:layout_marginRight="@dimen/net_gogame_gowrap_margin_right" android:layout_marginBottom="@dimen/net_gogame_gowrap_margin_top">
        <net.gogame.gowrap.ui.view.AutoStateButton android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center" android:id="@id/net_gogame_gowrap_faq_button" android:background="@drawable/net_gogame_gowrap_default_button_background" android:layout_height="50.0dip" android:layout_margin="8.0dip" android:text="@string/net_gogame_gowrap_help_faq_button_caption" android:maxLines="2" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" android:drawableLeft="@drawable/net_gogame_gowrap_icon_faq" style="@style/net_gogame_gowrap_help_button" />
        <net.gogame.gowrap.ui.view.AutoStateButton android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center" android:id="@id/net_gogame_gowrap_support_form_button" android:background="@drawable/net_gogame_gowrap_default_button_background" android:layout_height="50.0dip" android:layout_margin="8.0dip" android:text="@string/net_gogame_gowrap_help_form_button_caption" android:maxLines="2" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" android:drawableLeft="@drawable/net_gogame_gowrap_icon_support_form_new" style="@style/net_gogame_gowrap_help_button" />
        <net.gogame.gowrap.ui.view.AutoStateButton android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center" android:id="@id/net_gogame_gowrap_support_chat_button" android:background="@drawable/net_gogame_gowrap_default_button_background" android:layout_height="50.0dip" android:layout_margin="8.0dip" android:text="@string/net_gogame_gowrap_help_chat_button_caption" android:maxLines="2" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" android:drawableLeft="@drawable/net_gogame_gowrap_icon_support_chat_new" style="@style/net_gogame_gowrap_help_button" />
    </LinearLayout>
</ScrollView>